--- a/springMVC_YOGIHOXY/pom.xml
+++ b/springMVC_YOGIHOXY/pom.xml
@@ -30,12 +30,57 @@
   			<version>11.2.0.3</version>
 		</dependency>
 		
+		<!-- aop구현할때 필요한 라이브러리 -->
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+          <version>${org.aspectj-version}</version>
+      </dependency>
+      <!-- ajax처리를 위한 라이브러리 -->
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.10.3</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.10.3</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.10.3</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.10</version>
+      </dependency>
+      <dependency>
+        <groupId>com.googlecode.json-simple</groupId>
+        <artifactId>json-simple</artifactId>
+        <version>1.1.1</version>
+      </dependency>
+		
 		<!-- datasource 관련 라이브러리설정 -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
   			<artifactId>commons-dbcp</artifactId>
   			<version>1.4</version>
 		</dependency>
+		
+		<dependency>
+     	 	 <groupId>commons-io</groupId>
+      	 	 <artifactId>commons-io</artifactId>
+      	 	 <version>2.4</version>
+      </dependency>
+      
+      <dependency>
+       		 <groupId>commons-fileupload</groupId>
+       		 <artifactId>commons-fileupload</artifactId>
+      		 <version>1.3.3</version>
+      </dependency>
 		
 		<!-- spring-orm 라이브러리 설정 spring 관련
 			라이브러리와 같은 버전 설정 -->
