--- a/springMVC_YOGIHOXY/pom.xml
+++ b/springMVC_YOGIHOXY/pom.xml
@@ -81,6 +81,13 @@
        		 <artifactId>commons-fileupload</artifactId>
       		 <version>1.3.3</version>
       </dependency>
+      
+      <!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+		<dependency>
+   		 <groupId>net.coobird</groupId>
+   		 <artifactId>thumbnailator</artifactId>
+   		 <version>0.4.8</version>
+		</dependency>
 		
 		<!-- spring-orm 라이브러리 설정 spring 관련
 			라이브러리와 같은 버전 설정 -->
